Compiler/tests/bad/Functions/05_function.rs
// while context

fn add(x : i32, y : i32)
{
    return x + y;
}

fn main(){
  add(5, 6);
}